feat: honor package.json jdeploy.args (e.g. --add-opens) in bundled jdeploy.js launcher
The npm launcher (jdeploy.js) previously ignored the jdeploy.args array in
package.json, so publishers had to hand-edit the generated launcher to add JVM
flags like --add-opens after deploying. It now processes jdeploy.args at
runtime, mirroring the client4j (Go) launcher: platform-conditional prefixes
(-[mac], -D[win], -X[linux], pipe-OR groups) resolve on the running machine,
and --flag value options such as --add-opens are split into the two tokens the
JVM expects. Args are injected at publish time via a {{JAVA_ARGS}} placeholder.

Adds a platform-mocked unit test for the arg processing.